# gesture_capture

./: .gitignore  .idea  CMakeLists.txt  Contour.cpp  Contour.h  Geo.cpp  Geo.h  Image.cpp  Image.h  Image_utils.cpp  Image_utils.h  MODULE.bazel  Params.cpp  Params.h  View.cpp  View.h  WORKSPACE  Webcam.cpp  Webcam.h  main.cpp  src
bazel-out/: stable-status.txt  volatile-status.txt
src/: BUILD  gesture_capture.cpp  gesture_capture.h  main.cpp  params.cpp  params.h
src/capture/: webcam_capture.cpp  webcam_capture.h
src/imageproc/: filters.h
src/keypoints/: contour.cpp  contour.h
src/utils/: filters.cpp  filters.h  geometry.cpp  geometry.h  image.cpp  image.h  image_utils.cpp  image_utils.h
